syntax = "proto3";

package metrics;

option go_package = "github.com/Sofja96/go-metrics.git/internal/proto";

import "google/protobuf/empty.proto";

message Metric {
  string id = 1;
  string type = 2;
  int64  delta = 3;
  double value = 4;
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  bool success = 1;
  string error = 2;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
  bytes compressed_data = 2;
}

message UpdateMetricsResponse {
  bool success = 1;
  string error = 2;
}

message GetMetricRequest {
  string type = 1;
  string name = 2;
}

message GetMetricResponse {
  Metric metric = 1;
  string error = 2;
}


message GetAllMetricsResponse {
  repeated Metric metrics = 1;
}


service Metrics {
  rpc UpdateMetric (UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc UpdateMetrics (UpdateMetricsRequest) returns (UpdateMetricsResponse);
  rpc GetMetric (GetMetricRequest) returns (GetMetricResponse);
  rpc GetAllMetrics (google.protobuf.Empty) returns (GetAllMetricsResponse);
}